--- a/wiki/de/Macro_TechDraw_AuxiliaryView.html
+++ b/wiki/de/Macro_TechDraw_AuxiliaryView.html
@@ -90,7 +90,7 @@ TechDraw Hilfsansicht
 <p>Gehen wir davon aus, dass uns eine netzparallele Ansicht vorliegt, aus der wir andere Ansichten ableiten wollen, um die wahren Formen der Formelemente darzustellen, die bema&szlig;t werden sollen.
 </p><p>Die Schl&uuml;sselidee ist, eine gerade Linie in der Basisansicht auszuw&auml;hlen, und senkrecht darauf eine Hilfsansicht festzulegen; diese ist die Basisansicht f&uuml;r eine weitere Hilfsansicht entlang der geraden Linie. Wir k&ouml;nnen Hilfsansichten aneinanderketten, bis wir alle drei Hauptansichten des Objekts und eine entlang der zylindrischen Teilform erstellt haben:
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_AuxiliaryView_Pre02.png&amp;filetimestamp=20250507173928&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AuxiliaryView_Pre02.png" decoding="async" width="400" height="433" class="mw-file-element" data-file-width="722" data-file-height="782"></a></span>
-</p><p>Die beliebig positionierte gerade Linie (rot) in der Startansicht (Start view) wird als Linie mit wahrer L&auml;nge in die Hilfsansicht X und als Punkt in die Hilfsansicht Y projiziert, wo auch die wahre Breite und die wahre St&auml;rke der Bodenplatte erkennen. Hilfsansicht Z wird senkrecht zur Bodenplatte festgelegt und stellt die wahre form der Bodenplatte und ihrer L&ouml;cher dar. Hilfsansicht R steht senkrecht auf der l&auml;ngeren Kante der Bodenplatte und zeigt die wahren Winkel der Boden- und Deckelfl&auml;chen der zylindrischen Teilform und wie sie an die Bodenplatte passt. Die letzte, Hilfsansicht S, wird entlang der Zylinderachse festgelegt und zeigt den Durchmesser und die Wandst&auml;rke der zylindrischen Teilform.
+</p><p>Die beliebig positionierte gerade Linie (rot) in der Ausgangsansicht (Start view) wird in der Hilfsansicht X (AuxView X) als Linie mit wahrer L&auml;nge und in der Hilfsansicht Y als Punkt  projiziert, wo wir auch die wahre Breite und die wahre St&auml;rke der Bodenplatte erkennen. Hilfsansicht Z wird senkrecht zur Bodenplatte festgelegt und stellt die wahre Form der Bodenplatte und ihrer L&ouml;cher dar. Hilfsansicht R steht senkrecht auf der l&auml;ngeren Kante der Bodenplatte und zeigt die wahren Winkel von Boden- und Deckelfl&auml;che der zylindrischen Teilform und wie sie zur Bodenplatte passt. Die letzte, Hilfsansicht S, wird entlang der Zylinderachse festgelegt und zeigt den Durchmesser und die Wandst&auml;rke der zylindrischen Teilform.
 </p><p>Das manuelle Zeichnen von Hilfsansichten erfordert eine zweite Basisansicht, um auf die H&ouml;hen &uuml;ber der Ebene der Basisansicht zuzugreifen, aber da FreeCAD die ganze Projektionsarbeit &uuml;bernimmt, k&ouml;nnen wir uns allein auf die Richtung der Ansicht (Blickrichtung) konzentrieren.
 </p><p><span id="Usage"></span>
 </p>
@@ -420,12 +420,12 @@ if __name__ == "__main__":
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260113143935
+Cached time: 20260113145955
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.064 seconds
-Real time usage: 0.107 seconds
+CPU time usage: 0.061 seconds
+Real time usage: 0.094 seconds
 Preprocessor visited node count: 268/1000000
 Post&#8208;expand include size: 26642/2097152 bytes
 Template argument size: 20237/2097152 bytes
@@ -436,19 +436,19 @@ Unstrip post&#8208;expand size: 10897/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.236      1 -total
- 23.56%    6.889      1 Template:TechDraw_Tools_navi/de
- 22.40%    6.548      1 Template:Macro/de
- 14.42%    4.215      2 Template:Navigation_menu_2
- 12.18%    3.562      1 Template:VeryImportantMessage
- 11.08%    3.240      1 Template:MacroCode
-  8.60%    2.514      1 Template:Userdocnavi/de
-  6.69%    1.957      1 Template:Caption
-  6.03%    1.764      1 Template:Clear
-  5.97%    1.746      1 Template:Button
+100.00%   29.353      1 -total
+ 27.29%    8.011      1 Template:TechDraw_Tools_navi/de
+ 20.95%    6.150      1 Template:Macro/de
+ 14.81%    4.348      2 Template:Navigation_menu_2
+ 11.33%    3.326      1 Template:Userdocnavi/de
+  9.55%    2.803      1 Template:VeryImportantMessage
+  8.86%    2.602      1 Template:Clear
+  7.48%    2.194      1 Template:Caption
+  5.77%    1.693      1 Template:Button
+  5.22%    1.533      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:381604-0!canonical and timestamp 20260113143935 and revision id 1737861. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:381604-0!canonical and timestamp 20260113145955 and revision id 1737863. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
