--- a/wiki/it/Cables_WireFlex.html
+++ b/wiki/it/Cables_WireFlex.html
@@ -55,10 +55,9 @@
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The <span typeof="mw:File"><a href="../index.php?title=Cables_WireFlex.svg&amp;filetimestamp=20250207202331&amp;.html" class="mw-file-description"><img src="../File/Cables_WireFlex.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Cables_WireFlex.html" title="Cables WireFlex">WireFlex</a> object is derived from <span typeof="mw:File"><a href="../index.php?title=Draft_Wire.svg&amp;filetimestamp=20210319103011&amp;.html" class="mw-file-description"><img src="../File/Draft_Wire.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Draft_Wire.html" title="Draft Wire">Draft Wire</a> and inherits all its properties. The main difference is that WireFlex is able to attach every of its vertexes to external vertex or object (attachment to object is understood as an attachment to its Placement.Base). Not every vertex has to be attached, some of them can be left to move freely depending on current needs. Another difference is that the <b>WireFlex</b> can take on three different shapes (see <a href="#Path_Type_Property">Path Type Proterty</a>).
+<p>l'<span typeof="mw:File"><a href="../index.php?title=Cables_WireFlex.svg&amp;filetimestamp=20250207202331&amp;.html" class="mw-file-description"><img src="../File/Cables_WireFlex.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Cables_WireFlex.html" title="Cables WireFlex">WireFlex</a> oggetto &egrave; derivato da <span typeof="mw:File"><a href="../index.php?title=Draft_Wire.svg&amp;filetimestamp=20210319103011&amp;.html" class="mw-file-description"><img src="../File/Draft_Wire.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Draft_Wire.html" title="Draft Wire">Draft Wire</a> e ne eredita tutte le propriet&agrave;. La differenza principale &egrave; che WireFlex &egrave; in grado di collegare ogni suo vertice a un vertice o oggetto esterno (il collegamento all'oggetto &egrave; inteso come collegamento al suo Placement.Base). Non tutti i vertici devono essere collegati, alcuni di essi possono essere lasciati liberi di muoversi a seconda delle esigenze del momento. Un'altra differenza &egrave; che<b>WireFlex</b> 
+pu&ograve; assumere tre forme diverse (vedi <a href="#Path_Type_Property">Path Type Proterty</a>).
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Main purpose of a <b>WireFlex</b> is to serve as a base for a <a href="../Cables_Cable.html" title="Cables Cable">Cable</a> or a <a href="../Cables_CableConduit.html" title="Cables CableConduit">Cable Conduit</a>.
 </p>
@@ -250,13 +249,13 @@ When in <b>Draft Edit</b> mode DO NOT use "Add point" and "Delete point" from co
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113150025
+Cached time: 20260113150230
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.116 seconds
-Real time usage: 0.150 seconds
-Preprocessor visited node count: 1244/1000000
+CPU time usage: 0.121 seconds
+Real time usage: 0.162 seconds
+Preprocessor visited node count: 1243/1000000
 Post&#8208;expand include size: 17546/2097152 bytes
 Template argument size: 4196/2097152 bytes
 Highest expansion depth: 7/100
@@ -266,19 +265,19 @@ Unstrip post&#8208;expand size: 1163/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.585      1 -total
- 33.68%   12.321     16 Template:PropertyData
- 27.03%    9.890     16 Template:Variable
- 13.75%    5.031      2 Template:Docnav/it
- 13.40%    4.902      3 Template:TitleProperty
- 11.89%    4.349     16 Template:Value
- 10.45%    3.825     32 Template:Incode
-  8.33%    3.046      1 Template:GuiCommand
-  6.42%    2.350      5 Template:Caption
-  3.78%    1.383      1 Template:Button
+100.00%   35.711      1 -total
+ 35.84%   12.799     16 Template:PropertyData
+ 28.04%   10.012     16 Template:Variable
+ 18.03%    6.439      3 Template:TitleProperty
+ 11.64%    4.157      1 Template:GuiCommand
+  9.85%    3.519     16 Template:Value
+  9.22%    3.293     32 Template:Incode
+  5.81%    2.076      2 Template:Docnav/it
+  4.62%    1.650      5 Template:Caption
+  3.78%    1.350      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:408361-0!canonical and timestamp 20260113150025 and revision id 1720114. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:408361-0!canonical and timestamp 20260113150229 and revision id 1737865. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
