Updated page Macro TechDraw AuxiliaryView/de

--- a/wiki/de/Macro_TechDraw_AuxiliaryView.html
+++ b/wiki/de/Macro_TechDraw_AuxiliaryView.html
@@ -98,10 +98,10 @@ TechDraw Hilfsansicht
 <ol><li>Sicherstellen, dass <span typeof="mw:File"><a href="../index.php?title=TechDraw_ToggleFrame.svg&amp;filetimestamp=20241127175342&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ToggleFrame.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ToggleFrame.html" title="TechDraw ToggleFrame/de">Ansichtsrahmen eingeschaltet</a> und Knotenpunkte ausw&auml;hlbar sind.</li>
 <li>Zwei Knotenpunkte in derselben Ansicht ausw&auml;hlen.</li>
 <li>Dieses Makro ausf&uuml;hren.</li>
-<li>Eine neue Hilfsansicht <b>AuxView</b> wird erstellt, einschlie&szlig;lich der Benennung "AuxView X" der Ansicht (ein einfaches Textfeld).</li>
-<li>Ein Ansichtspfeil wird der Basisansicht hinzugef&uuml;gt, einschlie&szlig;lich der Richtungsbenennung "X".</li>
+<li>Eine neue Hilfsansicht <b>AuxView</b> wird erstellt, einschlie&szlig;lich einer Kennzeichnung der Ansicht mit "AuxView X" (ein einfaches Textfeld).</li>
+<li>Ein Ansichtspfeil wird der Basisansicht hinzugef&uuml;gt, einschlie&szlig;lich einer Kennzeichnung der Richtung mit "X".</li>
 <li>Die Hilfsansicht auf die gew&uuml;nschte Position ziehen.</li>
-<li>Die Benennung der Richtung bearbeiten und die Benennung der Ansicht entsprechend anpassen.</li></ol>
+<li>Die Kennzeichnung der Richtung bearbeiten und die Kennzeichnung der Ansicht entsprechend anpassen.</li></ol>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Hinweise">Hinweise</span></h2>
@@ -420,12 +420,12 @@ if __name__ == "__main__":
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260113145955
+Cached time: 20260113151642
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.061 seconds
-Real time usage: 0.094 seconds
+CPU time usage: 0.068 seconds
+Real time usage: 0.097 seconds
 Preprocessor visited node count: 268/1000000
 Post&#8208;expand include size: 26642/2097152 bytes
 Template argument size: 20237/2097152 bytes
@@ -436,19 +436,19 @@ Unstrip post&#8208;expand size: 10897/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.353      1 -total
- 27.29%    8.011      1 Template:TechDraw_Tools_navi/de
- 20.95%    6.150      1 Template:Macro/de
- 14.81%    4.348      2 Template:Navigation_menu_2
- 11.33%    3.326      1 Template:Userdocnavi/de
-  9.55%    2.803      1 Template:VeryImportantMessage
-  8.86%    2.602      1 Template:Clear
-  7.48%    2.194      1 Template:Caption
-  5.77%    1.693      1 Template:Button
-  5.22%    1.533      1 Template:MacroCode
+100.00%   31.319      1 -total
+ 22.76%    7.128      1 Template:TechDraw_Tools_navi/de
+ 16.65%    5.215      1 Template:Userdocnavi/de
+ 15.15%    4.744      1 Template:Macro/de
+ 13.52%    4.236      2 Template:Navigation_menu_2
+ 10.06%    3.150      1 Template:MacroCode
+  9.63%    3.016      1 Template:VeryImportantMessage
+  8.86%    2.776      1 Template:Caption
+  7.39%    2.316      1 Template:Button
+  6.67%    2.089      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:381604-0!canonical and timestamp 20260113145955 and revision id 1737863. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:381604-0!canonical and timestamp 20260113151642 and revision id 1737869. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
