--- a/wiki/it/Cables_Cable.html
+++ b/wiki/it/Cables_Cable.html
@@ -54,9 +54,9 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
+<p><span id="Description"></span>
+</p>
+<h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The <span typeof="mw:File"><a href="../index.php?title=Cables_Cable.svg&amp;filetimestamp=20250207201942&amp;.html" class="mw-file-description"><img src="../File/Cables_Cable.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Cables_Cable.html" title="Cables Cable">Cable</a> creates a Cable object based on selected <a href="../Cables_WireFlex.html" title="Cables WireFlex">Cables WireFlex</a> and <a href="../Cables_Profile.html" title="Cables Profile">Cables Profile</a>. The <a href="../Cables_CompoundPath.html" title="Cables CompoundPath">CompoundPath</a> can also be selected as a base wire (introduced in version 0.2.0). The <b>Cable</b> is fully parametric and is derived from <a href="../Arch_Pipe.html" title="Arch Pipe">Arch Pipe</a> and inherits all of its properties. Some properties specific for <b>Arch Pipe</b> are hidden and not used by <b>Cable</b>.
 </p>
@@ -190,12 +190,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113151757
+Cached time: 20260113152107
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.074 seconds
-Real time usage: 0.116 seconds
+CPU time usage: 0.079 seconds
+Real time usage: 0.113 seconds
 Preprocessor visited node count: 928/1000000
 Post&#8208;expand include size: 13314/2097152 bytes
 Template argument size: 3343/2097152 bytes
@@ -206,19 +206,19 @@ Unstrip post&#8208;expand size: 1124/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.138      1 -total
- 28.46%    9.715     14 Template:PropertyData
- 17.13%    5.849     14 Template:Variable
- 15.57%    5.316      1 Template:Value
- 13.05%    4.454      3 Template:TitleProperty
- 12.71%    4.338      1 Template:GuiCommand
-  8.85%    3.020     15 Template:Incode
-  6.46%    2.205      1 Template:Caption
-  6.44%    2.197      2 Template:Docnav
-  6.43%    2.194      1 Template:Button
+100.00%   33.531      1 -total
+ 27.35%    9.172     14 Template:PropertyData
+ 19.28%    6.465     14 Template:Variable
+ 14.88%    4.988      1 Template:GuiCommand
+ 13.43%    4.504      1 Template:Value
+ 12.64%    4.237      3 Template:TitleProperty
+  8.24%    2.763      2 Template:MenuCommand
+  7.38%    2.473      2 Template:Docnav
+  7.14%    2.393     15 Template:Incode
+  6.33%    2.124      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410994-0!canonical and timestamp 20260113151757 and revision id 1737871. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410994-0!canonical and timestamp 20260113152107 and revision id 1737873. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
