--- a/wiki/de/Macro_TechDraw_AuxiliaryView.html
+++ b/wiki/de/Macro_TechDraw_AuxiliaryView.html
@@ -106,7 +106,7 @@ TechDraw Hilfsansicht
 </p>
 <h2><span class="mw-headline" id="Hinweise">Hinweise</span></h2>
 <ul><li>Die Auswahlreihenfolge der Knotenpunkte bestimmt die Ausrichtung der Ansicht.</li>
-<li>Der Ursprung der Ansicht ist der Mittelpunkt des Begrenzungsrahmens und daher nutzlos f&uuml;r geometrische Vorg&auml;nge, wie das Messen des Abstandes zur Linie bzw. zum Vektor zwischen den ausgew&auml;hlten Knotenpunkten. So ein Abstand w&uuml;rde das Festlegen einer Schnittlinie in der Basisansicht erm&ouml;glichen, und diese Information k&ouml;nnte im 3D-Raum zum Festlegen einer Schnittansicht verwendet werden.</li>
+<li>Der Ursprung der Ansicht ist der Mittelpunkt des Begrenzungsrahmens und daher nutzlos f&uuml;r geometrische Funktionen, wie das Messen des Abstandes zur Linie bzw. zum Vektor zwischen den ausgew&auml;hlten Knotenpunkten. So ein Abstand w&uuml;rde das Festlegen einer Schnittlinie in der Basisansicht erm&ouml;glichen, und diese Information k&ouml;nnte im 3D-Raum zum Festlegen einer Schnittansicht verwendet werden.</li>
 <li>Die Hilfsansichten werden in der Mitte des Zeichnungsblattes erstellt und m&uuml;ssen manuell positioniert werden.</li></ul>
 <p><br>
 </p>
@@ -420,12 +420,12 @@ if __name__ == "__main__":
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260113151642
+Cached time: 20260113152317
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.068 seconds
-Real time usage: 0.097 seconds
+CPU time usage: 0.063 seconds
+Real time usage: 0.085 seconds
 Preprocessor visited node count: 268/1000000
 Post&#8208;expand include size: 26642/2097152 bytes
 Template argument size: 20237/2097152 bytes
@@ -436,19 +436,19 @@ Unstrip post&#8208;expand size: 10897/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.319      1 -total
- 22.76%    7.128      1 Template:TechDraw_Tools_navi/de
- 16.65%    5.215      1 Template:Userdocnavi/de
- 15.15%    4.744      1 Template:Macro/de
- 13.52%    4.236      2 Template:Navigation_menu_2
- 10.06%    3.150      1 Template:MacroCode
-  9.63%    3.016      1 Template:VeryImportantMessage
-  8.86%    2.776      1 Template:Caption
-  7.39%    2.316      1 Template:Button
-  6.67%    2.089      1 Template:Clear
+100.00%   21.380      1 -total
+ 25.94%    5.545      1 Template:TechDraw_Tools_navi/de
+ 21.38%    4.571      1 Template:Macro/de
+ 15.45%    3.304      2 Template:Navigation_menu_2
+ 11.49%    2.456      1 Template:Userdocnavi/de
+  9.96%    2.129      1 Template:MacroCode
+  8.55%    1.827      1 Template:VeryImportantMessage
+  8.22%    1.757      1 Template:Clear
+  6.70%    1.432      1 Template:Caption
+  4.79%    1.023      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:381604-0!canonical and timestamp 20260113151642 and revision id 1737869. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:381604-0!canonical and timestamp 20260113152317 and revision id 1737875. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
