--- a/wiki/it/Macro_Ellipse-Center+2Points.html
+++ b/wiki/it/Macro_Ellipse-Center+2Points.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Ellipse-Center+2Points/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Ellipse-Center%2B2Points&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_Ellipse-Center%2B2Points.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Makro Ellipse - Zentrum + 2 Punkte (67% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_Ellipse-Center%2B2Points.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Makro Ellipse - Zentrum + 2 Punkte (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Ellipse-Center%2B2Points.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Ellipse-Center+2Points (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Macro_Ellipse-Center%2B2Points.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Ellipse-Center+2Points (67% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
-<li><a href="../pl/Macro_Ellipse-Center%2B2Points.html" class="mw-pt-progress mw-pt-progress--med" title="Makrodefinicja: Elipsa przez &#347;rodek i dwa punkty (67% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../fr/Macro_Ellipse-Center%2B2Points.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Ellipse-Center+2Points (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><a href="../pl/Macro_Ellipse-Center%2B2Points.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Elipsa przez &#347;rodek i dwa punkty (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../cs/Macro_Ellipse-Center%2B2Points.html" class="mw-pt-progress mw-pt-progress--med" title="Makro Elipsa-St&#345;ed+2Body (56% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -73,11 +73,11 @@ Ellisse da centro e 2 punti
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="Description"></span>
+</p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>Crea un'ellisse selezionando tre punti, in questo ordine: centro, raggio maggiore e raggio minore.
 </p>
 </div>
@@ -133,28 +133,28 @@ except:
     print( "First:centre, Second:major radius and Third:minor radius")</pre>
 <!-- 
 NewPP limit report
-Cached time: 20251022140206
+Cached time: 20260113164517
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.051 seconds
-Real time usage: 0.059 seconds
+CPU time usage: 0.037 seconds
+Real time usage: 0.094 seconds
 Preprocessor visited node count: 93/1000000
 Post&#8208;expand include size: 2107/2097152 bytes
 Template argument size: 2115/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3020/5000000 bytes
+Unstrip post&#8208;expand size: 3039/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.524      1 -total
- 75.29%    4.159      1 Template:Macro/it
- 22.63%    1.250      1 Template:MacroCode
+100.00%    7.124      1 -total
+ 55.60%    3.961      1 Template:Macro/it
+ 43.05%    3.067      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:18729-0!canonical and timestamp 20251022140206 and revision id 1672264. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:18729-0!canonical and timestamp 20260113164516 and revision id 1737877. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
