--- a/wiki/it/Macro_Ellipse-Center+2Points.html
+++ b/wiki/it/Macro_Ellipse-Center+2Points.html
@@ -76,12 +76,8 @@ Ellisse da centro e 2 punti
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
-<p>Crea un'ellisse selezionando tre punti, in questo ordine: centro, raggio maggiore e raggio minore.
-</p>
-</div>
-<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=EllipseCenter2Point.png&amp;filetimestamp=20140506193042&amp;.html" class="mw-file-description"><img src="../File/EllipseCenter2Point.png" decoding="async" width="534" height="181" class="mw-file-element" data-file-width="534" data-file-height="181"></a></span>
+<p>Crea un'ellisse selezionando tre punti (in questo ordine): centro, raggio maggiore e raggio minore
+</p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=EllipseCenter2Point.png&amp;filetimestamp=20140506193042&amp;.html" class="mw-file-description"><img src="../File/EllipseCenter2Point.png" decoding="async" width="534" height="181" class="mw-file-element" data-file-width="534" data-file-height="181"></a></span>
 </p><p><span id="Latest"></span>
 </p>
 <h2><span class="mw-headline" id="Ultima_versione">Ultima versione</span></h2>
@@ -133,13 +129,13 @@ except:
     print( "First:centre, Second:major radius and Third:minor radius")</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260113164517
+Cached time: 20260113164538
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.037 seconds
-Real time usage: 0.094 seconds
-Preprocessor visited node count: 93/1000000
+CPU time usage: 0.028 seconds
+Real time usage: 0.044 seconds
+Preprocessor visited node count: 89/1000000
 Post&#8208;expand include size: 2107/2097152 bytes
 Template argument size: 2115/2097152 bytes
 Highest expansion depth: 5/100
@@ -149,12 +145,12 @@ Unstrip post&#8208;expand size: 3039/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.124      1 -total
- 55.60%    3.961      1 Template:Macro/it
- 43.05%    3.067      1 Template:MacroCode
+100.00%    6.278      1 -total
+ 58.84%    3.694      1 Template:Macro/it
+ 39.29%    2.467      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:18729-0!canonical and timestamp 20260113164516 and revision id 1737877. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:18729-0!canonical and timestamp 20260113164538 and revision id 1737879. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
