Created page with "Icona barra strumenti [[Image:Macro_Ellipse-Center%2B2Points.png]]"

--- a/wiki/it/Macro_Ellipse-Center+2Points.html
+++ b/wiki/it/Macro_Ellipse-Center+2Points.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Ellipse-Center%2B2Points.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Makro Ellipse - Zentrum + 2 Punkte (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Ellipse-Center%2B2Points.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Ellipse-Center+2Points (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Ellipse-Center%2B2Points.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Ellipse-Center+2Points (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Ellipse-Center%2B2Points.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Elipsa przez &#347;rodek i dwa punkty (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../cs/Macro_Ellipse-Center%2B2Points.html" class="mw-pt-progress mw-pt-progress--med" title="Makro Elipsa-St&#345;ed+2Body (56% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -84,11 +84,8 @@ Ellisse da centro e 2 punti
 <p>L'ultima versione della macro si trova in <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-macros/blob/master/ObjectCreation/EllipseCenter2Points.FCMacro">EllipseCenter2Points.FCMacro</a> ma il modo pi&ugrave; semplice per installare questa macro &egrave; attraverso il <a href="../it/Std_AddonMgr.html" title="Std AddonMgr/it">Addon Manager</a>.
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Ellipse-Center%2B2Points.png&amp;filetimestamp=20190615124709&amp;.html" class="mw-file-description"><img src="../File/Macro_Ellipse-Center%2B2Points.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p>
-</div>
-<p><b>Macro_EllipseCenter2Points.FCMacro</b>
+<p>Icona barra strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Ellipse-Center%2B2Points.png&amp;filetimestamp=20190615124709&amp;.html" class="mw-file-description"><img src="../File/Macro_Ellipse-Center%2B2Points.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+</p><p><b>Macro_EllipseCenter2Points.FCMacro</b>
 </p>
 <pre># Macro Begin: Ellipse-Center+2Points.FCMacro +++++++++++++++++++++++++++++++++++++++++++++++++
 # http://freecad-tutorial.blogspot.com/2011/12/engine-9-poly-v-belt.html
@@ -129,28 +126,28 @@ except:
     print( "First:centre, Second:major radius and Third:minor radius")</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260113164538
+Cached time: 20260113164628
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.028 seconds
 Real time usage: 0.044 seconds
-Preprocessor visited node count: 89/1000000
+Preprocessor visited node count: 88/1000000
 Post&#8208;expand include size: 2107/2097152 bytes
 Template argument size: 2115/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3039/5000000 bytes
+Unstrip post&#8208;expand size: 3043/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.278      1 -total
- 58.84%    3.694      1 Template:Macro/it
- 39.29%    2.467      1 Template:MacroCode
+100.00%    3.675      1 -total
+ 56.13%    2.063      1 Template:Macro/it
+ 41.72%    1.533      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:18729-0!canonical and timestamp 20260113164538 and revision id 1737879. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:18729-0!canonical and timestamp 20260113164628 and revision id 1737881. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
