Created page with "==Descrizione=="

--- a/wiki/it/Macro_FlattenWire3Points.html
+++ b/wiki/it/Macro_FlattenWire3Points.html
@@ -1,8 +1,8 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FlattenWire3Points/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+FlattenWire3Points&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_FlattenWire3Points.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro FlattenWire3Points (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_FlattenWire3Points.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Linienzug abflachen mit drei Punkten (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_FlattenWire3Points.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FlattenWire3Points (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_FlattenWire3Points.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro FlattenWire3Points (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_FlattenWire3Points.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja FlattenWire3Points (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -72,11 +72,11 @@ Wire appiattita su piano da 3 punti
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="Description"></span>
+</p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>Questa macro appiattisce i contorni non planari su un piano definito da 3 punti.
 Per utilizzare questa macro, selezionare primi 3 vertici da una unica <a href="../it/Draft_Wire.html" title="Draft Wire/it">polilinea di Draft</a>.
 </p>
@@ -120,28 +120,28 @@ Per utilizzare questa macro, selezionare primi 3 vertici da una unica <a href=".
     sel.Object.Points = points</pre>
 <!-- 
 NewPP limit report
-Cached time: 20251009172152
+Cached time: 20260113164836
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.056 seconds
-Real time usage: 0.069 seconds
+CPU time usage: 0.031 seconds
+Real time usage: 0.047 seconds
 Preprocessor visited node count: 87/1000000
 Post&#8208;expand include size: 2026/2097152 bytes
 Template argument size: 1610/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2356/5000000 bytes
+Unstrip post&#8208;expand size: 2375/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.185      1 -total
- 61.03%    2.554      1 Template:Macro/it
- 36.56%    1.530      1 Template:MacroCode
+100.00%    5.654      1 -total
+ 57.69%    3.262      1 Template:Macro/it
+ 40.34%    2.281      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:64732-0!canonical and timestamp 20251009172152 and revision id 1659783. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:64732-0!canonical and timestamp 20260113164836 and revision id 1737883. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
