Updated page Macro FlattenWire3Points/it

--- a/wiki/it/Macro_FlattenWire3Points.html
+++ b/wiki/it/Macro_FlattenWire3Points.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_FlattenWire3Points.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Linienzug abflachen mit drei Punkten (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_FlattenWire3Points.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FlattenWire3Points (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_FlattenWire3Points.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro FlattenWire3Points (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_FlattenWire3Points.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja FlattenWire3Points (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -75,12 +75,8 @@ Wire appiattita su piano da 3 punti
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
-<p>Questa macro appiattisce i contorni non planari su un piano definito da 3 punti.
-Per utilizzare questa macro, selezionare primi 3 vertici da una unica <a href="../it/Draft_Wire.html" title="Draft Wire/it">polilinea di Draft</a>.
+<p>Questa macro appiattisce le polilinee di Draft che non sono planari su un piano definito da 3 punti. Per utilizzare questa macro, selezionare i primi 3 vertici di una singola <a href="../it/Draft_Wire.html" title="Draft Wire/it">polilinea di Draft</a>.
 </p>
-</div>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <p>Icona barra strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FlattenWire3Points.png&amp;filetimestamp=20190706165929&amp;.html" class="mw-file-description"><img src="../File/Macro_FlattenWire3Points.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </p><p><br>
@@ -120,28 +116,28 @@ Per utilizzare questa macro, selezionare primi 3 vertici da una unica <a href=".
     sel.Object.Points = points</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260113164836
+Cached time: 20260113165030
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.031 seconds
+CPU time usage: 0.029 seconds
 Real time usage: 0.047 seconds
-Preprocessor visited node count: 87/1000000
+Preprocessor visited node count: 83/1000000
 Post&#8208;expand include size: 2026/2097152 bytes
 Template argument size: 1610/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2375/5000000 bytes
+Unstrip post&#8208;expand size: 2379/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.654      1 -total
- 57.69%    3.262      1 Template:Macro/it
- 40.34%    2.281      1 Template:MacroCode
+100.00%    5.419      1 -total
+ 50.14%    2.717      1 Template:Macro/it
+ 48.02%    2.602      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:64732-0!canonical and timestamp 20260113164836 and revision id 1737883. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:64732-0!canonical and timestamp 20260113165030 and revision id 1737885. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
