--- a/wiki/it/Macro_FlattenWire3Points.html
+++ b/wiki/it/Macro_FlattenWire3Points.html
@@ -15,7 +15,7 @@ Wire appiattita su piano da 3 punti
 <th class="ctOdd">Descrizione
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Appiattisce contorni non planari su un piano definito da 3 punti<br><br>Versione macro: 1.0<br>Ultima modifica: 2016-02-06<br>Versione FreeCAD: All<br>Download: <a rel="nofollow" class="external text" href="https://www.freecad.org/wiki/images/1/1e/Macro_FlattenWire3Points.png">ToolBar Icon</a><br>Autore: Yorik<br>
+<td class="ctEven left macro-description">Appiattisce le polilinee non planari su un piano definito da 3 punti<br><br>Versione macro: 1.0<br>Ultima modifica: 2016-02-06<br>Versione FreeCAD: All<br>Download: <a rel="nofollow" class="external text" href="https://www.freecad.org/wiki/images/1/1e/Macro_FlattenWire3Points.png">ToolBar Icon</a><br>Autore: Yorik<br>
 </td></tr>
 <tr>
 <th class="ctOdd">Autore
@@ -116,15 +116,15 @@ Wire appiattita su piano da 3 punti
     sel.Object.Points = points</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260113165030
+Cached time: 20260113165112
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.029 seconds
-Real time usage: 0.047 seconds
+CPU time usage: 0.023 seconds
+Real time usage: 0.038 seconds
 Preprocessor visited node count: 83/1000000
-Post&#8208;expand include size: 2026/2097152 bytes
-Template argument size: 1610/2097152 bytes
+Post&#8208;expand include size: 2030/2097152 bytes
+Template argument size: 1614/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -132,12 +132,12 @@ Unstrip post&#8208;expand size: 2379/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.419      1 -total
- 50.14%    2.717      1 Template:Macro/it
- 48.02%    2.602      1 Template:MacroCode
+100.00%    6.105      1 -total
+ 59.21%    3.615      1 Template:Macro/it
+ 39.23%    2.395      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:64732-0!canonical and timestamp 20260113165030 and revision id 1737885. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:64732-0!canonical and timestamp 20260113165112 and revision id 1737887. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
