--- a/wiki/it/Macro_Site_From_Contours.html
+++ b/wiki/it/Macro_Site_From_Contours.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Site From Contours/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Site+From+Contours&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_Site_From_Contours.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Site From Contours (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_Site_From_Contours.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Grundst&uuml;ck aus Konturen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Site_From_Contours.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Site From Contours (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Site_From_Contours.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Site From Contours (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
@@ -75,11 +75,8 @@ Macro Sito da contorni
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Questa macro consente di selezionare una serie di oggetti contenenti i contorni, curve di livello e di creare da essi un Sito Arch. I contorni possono essere raggruppati in qualsiasi numero di oggetti e non &egrave; necessario formare polilinee chiuse. Tutto ci&ograve; &egrave; gestito dalla macro. Internamente, viene creata una bspline da ciascun contorno, poi vengono create le superfici rigate tra i contorni, quindi queste superfici sono unite in un oggetto shell e infine viene creato un sito Arch usando questa shell come terreno.
-</p>
-</div>
-<p><span typeof="mw:File"><a href="../index.php?title=Macro_Site_From_Contour_Example.jpg&amp;filetimestamp=20180830205203&amp;.html" class="mw-file-description"><img src="../File/Macro_Site_From_Contour_Example.jpg" decoding="async" width="640" height="390" class="mw-file-element" data-file-width="1057" data-file-height="644"></a></span>
+<p>Questa macro consente di selezionare una serie di oggetti contenenti contorni e di creare un sito Arch da essi. I contorni possono essere raggruppati in un numero qualsiasi di oggetti e non &egrave; necessario che formino polilinee chiuse. La macro si occuper&agrave; di tutto. Internamente, verr&agrave; creata una B-spline da ogni curva, quindi verranno create superfici rigate tra le curve, in seguito queste superfici rigate verranno unite in un oggetto shell e infine verr&agrave; creato un sito Arch utilizzando questa superficie shell come terreno.
+</p><p><span typeof="mw:File"><a href="../index.php?title=Macro_Site_From_Contour_Example.jpg&amp;filetimestamp=20180830205203&amp;.html" class="mw-file-description"><img src="../File/Macro_Site_From_Contour_Example.jpg" decoding="async" width="640" height="390" class="mw-file-element" data-file-width="1057" data-file-height="644"></a></span>
 </p><p><span id="Script"></span>
 </p>
 <h2><span class="mw-headline" id="Lo_Script">Lo Script</span></h2>
@@ -164,28 +161,28 @@ FreeCAD.ActiveDocument.recompute()</pre>
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20251009172230
+Cached time: 20260113165437
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.065 seconds
-Real time usage: 0.083 seconds
-Preprocessor visited node count: 92/1000000
+CPU time usage: 0.029 seconds
+Real time usage: 0.044 seconds
+Preprocessor visited node count: 91/1000000
 Post&#8208;expand include size: 1958/2097152 bytes
 Template argument size: 2230/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3043/5000000 bytes
+Unstrip post&#8208;expand size: 3049/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    3.646      1 -total
- 59.79%    2.180      1 Template:Macro/it
- 37.16%    1.355      1 Template:MacroCode
+100.00%    7.259      1 -total
+ 52.96%    3.844      1 Template:MacroCode
+ 45.63%    3.312      1 Template:Macro/it
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:105091-0!canonical and timestamp 20251009172230 and revision id 1659816. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:105091-0!canonical and timestamp 20260113165437 and revision id 1737889. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
