Updated page Macro Site From Contours/it

--- a/wiki/it/Macro_Site_From_Contours.html
+++ b/wiki/it/Macro_Site_From_Contours.html
@@ -75,7 +75,7 @@ Macro Sito da contorni
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<p>Questa macro consente di selezionare una serie di oggetti contenenti contorni e di creare un sito Arch da essi. I contorni possono essere raggruppati in un numero qualsiasi di oggetti e non &egrave; necessario che formino polilinee chiuse. La macro si occuper&agrave; di tutto. Internamente, verr&agrave; creata una B-spline da ogni curva, quindi verranno create superfici rigate tra le curve, in seguito queste superfici rigate verranno unite in un oggetto shell e infine verr&agrave; creato un sito Arch utilizzando questa superficie shell come terreno.
+<p>Questa macro consente di selezionare una serie di oggetti contenenti curve di livello e di creare un sito Arch da essi. Le curve di livello possono essere raggruppate in un numero qualsiasi di oggetti e non &egrave; necessario che formino polilinee chiuse. La macro si occuper&agrave; di tutto. Internamente, verr&agrave; creata una B-spline da ogni curva, quindi verranno create superfici rigate tra le curve, in seguito queste superfici rigate verranno unite in un oggetto shell e infine verr&agrave; creato un sito Arch utilizzando questa superficie shell come terreno.
 </p><p><span typeof="mw:File"><a href="../index.php?title=Macro_Site_From_Contour_Example.jpg&amp;filetimestamp=20180830205203&amp;.html" class="mw-file-description"><img src="../File/Macro_Site_From_Contour_Example.jpg" decoding="async" width="640" height="390" class="mw-file-element" data-file-width="1057" data-file-height="644"></a></span>
 </p><p><span id="Script"></span>
 </p>
@@ -158,12 +158,12 @@ FreeCAD.ActiveDocument.recompute()</pre>
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260113165449
+Cached time: 20260113165652
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.026 seconds
-Real time usage: 0.041 seconds
+CPU time usage: 0.024 seconds
+Real time usage: 0.039 seconds
 Preprocessor visited node count: 90/1000000
 Post&#8208;expand include size: 1958/2097152 bytes
 Template argument size: 2230/2097152 bytes
@@ -174,12 +174,12 @@ Unstrip post&#8208;expand size: 3053/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.347      1 -total
- 66.19%    2.877      1 Template:Macro/it
- 31.65%    1.376      1 Template:MacroCode
+100.00%    5.374      1 -total
+ 54.11%    2.908      1 Template:Macro/it
+ 44.33%    2.382      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:105091-0!canonical and timestamp 20260113165449 and revision id 1737891. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:105091-0!canonical and timestamp 20260113165652 and revision id 1737893. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
