Created page with "==Descrizione=="

--- a/wiki/it/Macro_Remove_parametric_history.html
+++ b/wiki/it/Macro_Remove_parametric_history.html
@@ -2,8 +2,8 @@
 <li><a href="../de/Macro_Remove_parametric_history.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Parametrische Historie entfernen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Remove_parametric_history.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Remove parametric history (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Macro_Remove_parametric_history.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Remove parametric history (57% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="../fr/Macro_Remove_parametric_history.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Remove parametric history (57% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><a href="../fr/Macro_Remove_parametric_history.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Remove parametric history (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Remove_parametric_history.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Usu&#324; histori&#281; parametryczn&#261; (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../cs/Macro_Remove_parametric_history.html" class="mw-pt-progress mw-pt-progress--med" title="Makro Odebrat historii parametr&#367; (57% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -74,11 +74,11 @@ Rimozione della cronologia
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="Description"></span>
+</p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>Questa operazione rimuove tutte le associazioni parametriche da un oggetto, lasciandolo come  <i>muto</i>.
 </p>
 </div>
@@ -101,28 +101,28 @@ newObject = FreeCAD.ActiveDocument.addObject("Part::Feature",newName)
 newObject.Shape = newShape</pre>
 <!-- 
 NewPP limit report
-Cached time: 20251023170602
+Cached time: 20260113165854
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.059 seconds
-Real time usage: 0.066 seconds
+CPU time usage: 0.034 seconds
+Real time usage: 0.058 seconds
 Preprocessor visited node count: 89/1000000
 Post&#8208;expand include size: 2076/2097152 bytes
 Template argument size: 837/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1989/5000000 bytes
+Unstrip post&#8208;expand size: 1996/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.468      1 -total
- 70.68%    3.158      1 Template:Macro/it
- 26.99%    1.206      1 Template:MacroCode
+100.00%    6.191      1 -total
+ 62.58%    3.874      1 Template:Macro/it
+ 35.73%    2.212      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2329-0!canonical and timestamp 20251023170602 and revision id 1675507. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2329-0!canonical and timestamp 20260113165853 and revision id 1737897. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
