Updated page User hub

--- a/wiki/User_hub.html
+++ b/wiki/User_hub.html
@@ -6,8 +6,8 @@
 <li><a href="es/User_hub.html" class="mw-pt-progress mw-pt-progress--high" title="Centro de usuarios (82% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="fr/User_hub.html" class="mw-pt-progress mw-pt-progress--complete" title="Documentation pour les utilisateurs (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="hr/User_hub.html" class="mw-pt-progress mw-pt-progress--med" title="Korisni&#269;ko okru&#382;enje (22% translated)" lang="hr" dir="ltr">hrvatski</a></li>
-<li><a href="it/User_hub.html" class="mw-pt-progress mw-pt-progress--high" title="Hub degli utenti (88% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="hu/User_hub.html" class="mw-pt-progress mw-pt-progress--high" title="User hub (88% translated)" lang="hu" dir="ltr">magyar</a></li>
+<li><a href="it/User_hub.html" class="mw-pt-progress mw-pt-progress--complete" title="Hub degli utenti (100% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="hu/User_hub.html" class="mw-pt-progress mw-pt-progress--complete" title="Felhaszn&aacute;l&oacute;i hub (100% translated)" lang="hu" dir="ltr">magyar</a></li>
 <li><a href="pl/User_hub.html" class="mw-pt-progress mw-pt-progress--complete" title="Centrum u&#380;ytkownika. (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="pt/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub/pt (12% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="pt-br/User_hub.html" class="mw-pt-progress mw-pt-progress--high" title="Central do Usu&aacute;rio (80% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
@@ -15,14 +15,14 @@
 <li><a href="fi/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (4% translated)" lang="fi" dir="ltr">suomi</a></li>
 <li><a href="sv/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (10% translated)" lang="sv" dir="ltr">svenska</a></li>
 <li><a href="cs/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="U&#382;ivatelsk&eacute; centrum (8% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
-<li><a href="bg/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="&#1055;&#1086;&#1084;&#1086;&#1097; &#1047;&#1072; &#1053;&#1086;&#1074;&#1080; &#1055;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1080; (10% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
+<li><a href="bg/User_hub.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1062;&#1077;&#1085;&#1090;&#1098;&#1088; &#1079;&#1072; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1080; (100% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="ru/User_hub.html" class="mw-pt-progress mw-pt-progress--high" title="&#1062;&#1077;&#1085;&#1090;&#1088; &#1087;&#1086;&#1083;&#1100;&#1079;&#1086;&#1074;&#1072;&#1090;&#1077;&#1083;&#1077;&#1081; (84% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="uk/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (2% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
 <li><a href="zh/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (2% translated)" lang="zh" dir="ltr">&#20013;&#25991;</a></li>
 <li><a href="zh-cn/User_hub.html" class="mw-pt-progress mw-pt-progress--high" title="&#29992;&#25143;&#20837;&#21475; (74% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="zh-hant/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (2% translated)" lang="zh-Hant" dir="ltr">&#20013;&#25991;&#65288;&#32321;&#39636;&#65289;</a></li>
 <li><a href="zh-tw/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="&#20351;&#29992;&#32773;&#20013;&#24515; (2% translated)" lang="zh-Hant-TW" dir="ltr">&#20013;&#25991;&#65288;&#33274;&#28771;&#65289;</a></li>
-<li><a href="ja/User_hub.html" class="mw-pt-progress mw-pt-progress--high" title="&#12518;&#12540;&#12470;&#12540;&#21521;&#12369;&#12495;&#12502; (72% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
+<li><a href="ja/User_hub.html" class="mw-pt-progress mw-pt-progress--high" title="&#12518;&#12540;&#12470;&#12540;&#21521;&#12369;&#12495;&#12502; (74% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="ko/User_hub.html" class="mw-pt-progress mw-pt-progress--complete" title="&#49324;&#50857;&#51088; &#46020;&#50880;&#47568; &#47784;&#51020; (100% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <p><span typeof="mw:File"><a href="index.php?title=User_hub.png&amp;filetimestamp=20190221145008&amp;.html" class="mw-file-description"><img src="File/User_hub.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
@@ -118,33 +118,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251129094012
+Cached time: 20260113183638
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.160 seconds
-Real time usage: 0.208 seconds
+CPU time usage: 0.148 seconds
+Real time usage: 0.186 seconds
 Preprocessor visited node count: 352/1000000
 Post&#8208;expand include size: 6164/2097152 bytes
 Template argument size: 1860/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4289/5000000 bytes
+Unstrip post&#8208;expand size: 4308/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.358      1 -total
- 46.35%    7.118      1 Template:Userdocnavi
- 21.05%    3.233      1 Template:Navigation_menu_2
- 10.43%    1.602      2 Template:VersionMinus
- 10.26%    1.575      7 Template:Incode
-  8.73%    1.341      1 Template:TOCright
-  8.09%    1.243      3 Template:Version
-  7.02%    1.079      1 Template:Button
+100.00%   11.178      1 -total
+ 36.24%    4.051      1 Template:Userdocnavi
+ 21.35%    2.386      1 Template:Navigation_menu_2
+ 12.60%    1.409      7 Template:Incode
+ 11.08%    1.238      1 Template:TOCright
+ 10.66%    1.192      1 Template:Button
+ 10.54%    1.178      2 Template:VersionMinus
+  9.82%    1.098      3 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193-0!canonical and timestamp 20251129094012 and revision id 1706229. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193-0!canonical and timestamp 20260113183638 and revision id 1706229. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
