--- a/wiki/de/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/de/Macro_Cut_Object_For_Magnets.html
@@ -72,9 +72,9 @@ Macro Cut Object for Magnets
 </td></tr>
 </tbody></table>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
+<p><span id="Description"></span>
+</p>
+<h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>This macro cuts a 3D object along a specified plane and automatically adds aligned magnet holes to both resulting pieces. The holes are positioned with intelligent collision detection to ensure they don't break through the outer walls of the object.
 </p>
@@ -270,12 +270,12 @@ Macro Cut Object for Magnets
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113194159
+Cached time: 20260113194207
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.040 seconds
-Real time usage: 0.075 seconds
+CPU time usage: 0.042 seconds
+Real time usage: 0.068 seconds
 Preprocessor visited node count: 167/1000000
 Post&#8208;expand include size: 3364/2097152 bytes
 Template argument size: 1252/2097152 bytes
@@ -286,13 +286,13 @@ Unstrip post&#8208;expand size: 891/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.113      1 -total
- 41.63%    5.042      1 Template:Macro
- 26.20%    3.174      1 Template:CodeDownload
- 24.55%    2.974      3 Template:FileName
+100.00%   20.355      1 -total
+ 75.77%   15.422      1 Template:CodeDownload
+ 13.19%    2.685      1 Template:Macro
+  9.48%    1.930      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113194158 and revision id 1737912. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113194207 and revision id 1737914. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
