Created page with "==Skript=="

--- a/wiki/de/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/de/Macro_Cut_Object_For_Magnets.html
@@ -238,9 +238,9 @@ Macro Cut Object for Magnets
 </p>
 <ul><li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more/blob/main/macros/Cut_Object_for_Magnets/CutObjectForMagnets.FCMacro">CutObjectForMagnets.FCMacro on GitHub</a></li></ul>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Script">Script</span></h2>
-</div>
+<p><span id="Script"></span>
+</p>
+<h2><span class="mw-headline" id="Skript">Skript</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Cut_Object_For_Magnets.png&amp;filetimestamp=20260106011212&amp;.html" class="mw-file-description"><img src="../File/Macro_Cut_Object_For_Magnets.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </p>
@@ -268,12 +268,12 @@ Macro Cut Object for Magnets
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113194238
+Cached time: 20260113194301
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.038 seconds
-Real time usage: 0.059 seconds
+CPU time usage: 0.048 seconds
+Real time usage: 0.081 seconds
 Preprocessor visited node count: 166/1000000
 Post&#8208;expand include size: 3364/2097152 bytes
 Template argument size: 1252/2097152 bytes
@@ -284,13 +284,13 @@ Unstrip post&#8208;expand size: 891/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.625      1 -total
- 45.11%    3.891      1 Template:Macro
- 29.17%    2.516      1 Template:CodeDownload
- 22.33%    1.926      3 Template:FileName
+100.00%   27.707      1 -total
+ 67.64%   18.741      1 Template:CodeDownload
+ 16.96%    4.699      3 Template:FileName
+ 13.68%    3.791      1 Template:Macro
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113194238 and revision id 1737924. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113194301 and revision id 1737926. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
